methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {var col:Color = getCouleurSol(); while (col==vert)
                                                                ^