methods.slug.SlugTracking.scala.code
var vert:Color = Color.green;

def isFacingTrail():Boolean = {var col:Color = getCouleurSol(); while (col==vert)
                                      {var test:Boolean = estFaceMur(); if (!test) {avance();}
                                       else {recule();gauche();}
                                      }
                              }
isFacingTrail();
